#
# $Id$
#
# Copyright (c) 2013 Scyphus Solutions Co. Ltd.  All rights reserved.
# Authors:
#      Hirochika Asai  <asai@scyphus.co.jp>
#

SUBDIRS = las
#EXTRA_DIST = 
#noinst_HEADERS = 
#INCLUDES = -I$(top_srcdir)/include

#bin_PROGRAMS = 
#libexec_PROGRAMS = 
#lib_LIBRARIES = lib.a
#noinst_LIBRARIES = 
#lib_LTLIBRARIES = lib.la
#noinst_LTLIBRARIES = 
#EXTRA_LTLIBRARIES = 
#prog_SOURCES = 
#lib_la_SOURCES = 
#prog_LDADD = lib.la
#prog_LDFLAGS = -static $(top_builddir)/libextra.la
#noinst_HEADERS = 

CLEANFILES = *~

#run: all
#	$(top_builddir)/.
#
#test: all
#	@echo "We have no test."
