#
# Copyright (c) 2013 Scyphus Solutions Co. Ltd.  All rights reserved.
# Authors:
#      Hirochika Asai  <asai@scyphus.co.jp>
#

bin_PROGRAMS = las

las_SOURCES = las.c las.h tokenizer.c assembler.c parser.c parser.h \
	instr.c instr.h expr.c \
	arch/x86_64.c \
	checkint.c checkint.h vector.c vector.h mvector.c mvector.h \
	hashtable.c hashtable.h

CLEANFILES = *~
